--- a/404.html
+++ b/404.html
@@ -60,8 +60,8 @@ a:hover {
       </div>
 
       <div id="description">
-        <p>Ooops, this page doesn't exist. Go <a href="{{ site.url }}">somewhere</a> else? :)</p>
-        <p>&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> <a href="/about/">{{ site.title }}</a></p>
+        <p>Ooops, this page doesn't exist. Go <a href="{{ site.baseurl }}">somewhere</a> else? :)</p>
+        <p>&copy; <script type="text/javascript">document.write(new Date().getFullYear());</script> <a href="{{ site.baseurl }}/about/">{{ site.title }}</a></p>
       </div>
     </div>
   </body>
